[package]
name = "yap_streaming"
version = "0.2.0"
edition = "2021"
authors = ["Easyoakland <97992568+Easyoakland@users.noreply.github.com>"]
description = "Yap extension crate for parsing streams"
repository = "https://github.com/Easyoakland/yap_streaming"
readme = "README.md"
documentation = "https://docs.rs/yap_streaming/"
homepage = "https://github.com/Easyoakland/yap_streaming"
license = "MIT"
categories = ["parsing"]
keywords = ["parser", "parser-combinators", "parsing", "streaming"]

include = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "src/**/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yap = "0.12.0"

[features]
default = ["alloc"]
alloc = []

[[example]]
name = "fizzbuzz"
required-features = ["alloc"]
path = "examples/fizzbuzz.rs"
